{
  "version": 4,
  "terraform_version": "1.15.5",
  "serial": 26,
  "lineage": "f9320cbd-e4e6-1786-d3bb-94b7fc5a3fd2",
  "resources": [
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0543dbdaf4e114be7",
            "arn": "arn:aws:ec2:ap-southeast-1:286501333631:instance/i-0d628bc965ae643ca",
            "associate_public_ip_address": true,
            "availability_zone": "ap-southeast-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0d628bc965ae643ca",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "inder-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0f6c33ba58eb6e89d",
            "private_dns": "ip-10-0-1-35.ap-southeast-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.35",
            "public_dns": "ec2-54-179-157-16.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "54.179.157.16",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0b4acdf5f2a73a359",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-070e989984d39def0",
            "tags": {
              "Name": "inder-ec2"
            },
            "tags_all": {
              "Name": "inder-ec2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0b2bad8207a4d1435"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.ec2.aws_key_pair.this",
            "module.public_subnet.aws_subnet.this",
            "module.security_group.aws_security_group.this",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.elastic_ip",
      "mode": "managed",
      "type": "aws_eip",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ab73556406e34e8e",
            "arn": "arn:aws:ec2:ap-southeast-1:286501333631:elastic-ip/eipalloc-0ab73556406e34e8e",
            "association_id": "eipassoc-0e6e49bd073009841",
            "domain": "vpc",
            "id": "eipalloc-0ab73556406e34e8e",
            "network_border_group": "ap-southeast-1",
            "network_interface": "eni-0c496dfddf7f57fab",
            "private_dns": "ip-10-0-1-71.ap-southeast-1.compute.internal",
            "private_ip": "10.0.1.71",
            "public_dns": "ec2-18-138-125-37.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "18.138.125.37",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "inder-eip"
            },
            "tags_all": {
              "Name": "inder-eip"
            },
            "vpc": true
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.internet_gateway",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:286501333631:internet-gateway/igw-09a17db1018a5e94c",
            "id": "igw-09a17db1018a5e94c",
            "owner_id": "286501333631",
            "tags": {
              "Name": "inder-igw"
            },
            "tags_all": {
              "Name": "inder-igw"
            },
            "vpc_id": "vpc-0e45ecd10f0466d45"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.nat_gateway",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ab73556406e34e8e",
            "association_id": "eipassoc-0e6e49bd073009841",
            "connectivity_type": "public",
            "id": "nat-0176e559c395c5ac9",
            "network_interface_id": "eni-0c496dfddf7f57fab",
            "private_ip": "10.0.1.71",
            "public_ip": "18.138.125.37",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-070e989984d39def0",
            "tags": {
              "Name": "inder-nat-gw"
            },
            "tags_all": {
              "Name": "inder-nat-gw"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.elastic_ip.aws_eip.this",
            "module.public_subnet.aws_subnet.this",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.private_route_table",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:286501333631:route-table/rtb-0f9720160b8b953f8",
            "id": "rtb-0f9720160b8b953f8",
            "owner_id": "286501333631",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0176e559c395c5ac9",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "inder-pvt-rt"
            },
            "tags_all": {
              "Name": "inder-pvt-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e45ecd10f0466d45"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.elastic_ip.aws_eip.this",
            "module.nat_gateway.aws_nat_gateway.this",
            "module.public_subnet.aws_subnet.this",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.private_route_table",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0417e4d87a0a138d2",
            "route_table_id": "rtb-0f9720160b8b953f8",
            "subnet_id": "subnet-0bd5c5d3ceb988cb1"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.elastic_ip.aws_eip.this",
            "module.nat_gateway.aws_nat_gateway.this",
            "module.private_route_table.aws_route_table.this",
            "module.private_subnet.aws_subnet.this",
            "module.public_subnet.aws_subnet.this",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.private_subnet",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:286501333631:subnet/subnet-0bd5c5d3ceb988cb1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bd5c5d3ceb988cb1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "286501333631",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "inder-pvt-sb"
            },
            "tags_all": {
              "Name": "inder-pvt-sb"
            },
            "vpc_id": "vpc-0e45ecd10f0466d45"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.private_subnet_2",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:286501333631:subnet/subnet-030f0effafdfe4e52",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-030f0effafdfe4e52",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "286501333631",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "inder-pvt-sb"
            },
            "tags_all": {
              "Name": "inder-pvt-sb"
            },
            "vpc_id": "vpc-0e45ecd10f0466d45"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.public_route_table",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:286501333631:route-table/rtb-0c9096d3198b52b2c",
            "id": "rtb-0c9096d3198b52b2c",
            "owner_id": "286501333631",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-09a17db1018a5e94c",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "inder-pub-rt"
            },
            "tags_all": {
              "Name": "inder-pub-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e45ecd10f0466d45"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.internet_gateway.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.public_route_table",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06f054361e742948c",
            "route_table_id": "rtb-0c9096d3198b52b2c",
            "subnet_id": "subnet-070e989984d39def0"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.internet_gateway.aws_internet_gateway.this",
            "module.public_route_table.aws_route_table.this",
            "module.public_subnet.aws_subnet.this",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.public_subnet",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:286501333631:subnet/subnet-070e989984d39def0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-070e989984d39def0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "286501333631",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "inder-pub-sb"
            },
            "tags_all": {
              "Name": "inder-pub-sb"
            },
            "vpc_id": "vpc-0e45ecd10f0466d45"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.security_group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:286501333631:security-group/sg-0b2bad8207a4d1435",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b2bad8207a4d1435",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "inder-sg",
            "name_prefix": "",
            "owner_id": "286501333631",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "inder-sg"
            },
            "tags_all": {
              "Name": "inder-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e45ecd10f0466d45"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:286501333631:vpc/vpc-0e45ecd10f0466d45",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-07c79932e7d271ed0",
            "default_route_table_id": "rtb-0d073b5eb77e30039",
            "default_security_group_id": "sg-077300543c2fe0aca",
            "dhcp_options_id": "dopt-06903b3576f5485ce",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0e45ecd10f0466d45",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0d073b5eb77e30039",
            "owner_id": "286501333631",
            "tags": {
              "Name": "inder-vpc"
            },
            "tags_all": {
              "Name": "inder-vpc"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}